Fixed logic for matching against private fields (#25)
* Fixed logic for matching against private fields

* - Cleanup some function names

* - Making things more human readable.

--- a/NetDiff.Test/NetDiff.Test.csproj
+++ b/NetDiff.Test/NetDiff.Test.csproj
@@ -98,7 +98,10 @@
     <Compile Include="TestObjects\GenericDynamicObjectCopy.cs" />
     <Compile Include="TestObjects\NestingObject.cs" />
     <Compile Include="TestObjects\ObjectWithList.cs" />
+    <Compile Include="TestObjects\ObjectWithPrivateMembers.cs" />
     <Compile Include="TestObjects\ObjectWithProperties.cs" />
+    <Compile Include="TestObjects\ObjectWithReadOnlyCollectionField.cs" />
+    <Compile Include="TestObjects\ObjectWithReadOnlyCollectionProperty.cs" />
     <Compile Include="TestObjects\SubObject.cs" />
     <Compile Include="TestObjects\SlightlyDifferentObject.cs" />
     <Compile Include="TestObjects\GenericDynamicObject.cs" />
